# Novastar_MCTRL300_basic_controller

./: .bandit  .gitattributes  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  _todo.rst  pyproject.toml  requirements.txt  run_me.ps1  setup.cfg  setup.py
_docs/: make.bat
_docs/source/: conf.py  index.rst
additional_info/: Terminal1.yat  cmd structure.ods  fozzy.yaw
assets/designer/: main_window.ui  main_window_2.ui
assets/documentation/: .~lock.cmd structure.ods#  captured command strings.txt  cmd structure.ods  desay6mm_upad2mm6_ctrl.txt
desay6_upad26_ctrl/: __init__.py  desay6_upad26_LED.py  desay6_upad26_ctrl.py
docs/source/: conf.py  index.rst  ui_objects.rst  usage.rst
src/: main.py
src/desay6_upad26_ctrl/: desay6_upad26_LED.py
src/gui/: gui.py  main_window.py  main_window_2.py
src/gui/designer/: main_window.ui
src/novastar_mctrl300/: command_layout.md  mctrl300.py  serports.py
src/serports/: serports.py
